<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TimeBank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TimeBank</string>
    <string name="nav_header_subtitle">nav_header_subtitle</string>
    <string name="nav_header_desc">nav_header_desc</string>

    <string name="action_settings">Settings</string>

    <string name="menu_show_profile">User Profile</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_edit_skills">Edit Skills</string>
    <string name="menu_show_adv">User Advertisement</string>
    <string name="menu_edit_adv">Edit Advertisement</string>
    <string name="drawer_menu_show_adv_list">Advertisement List</string>
    <string name="drawer_menu_show_adv_pending">Pending Requests</string>
    <string name="drawer_menu_show_adv_accepted">Accepted Requests</string>


    <string name="location_placeholder_text">Location</string>
    <string name="buyer_rating_text">No buyer rating yet</string>
    <string name="seller_rating_text">No seller rating yet</string>
    <string name="username_placeholder_text">Username</string>
    <string name="fullname_placeholder_text">Fullname</string>
    <string name="email_placeholder_text">Email</string>
    <string name="editProfileButtonText">Edit Profile</string>
    <string name="no_skills_placeholder_text">No Skills</string>
    <string name="editSkillsFragmentSaveButton">Save Skills</string>

    <string name="title_advertisement_placeholder_text">Title</string>
    <string name="description_advertisement_placeholder_text">Description</string>
    <string name="date_advertisement_placeholder_text">Date and Time</string>
    <string name="duration_advertisement_placeholder_text">Duration (Min)</string>
    <string name="location_advertisement_placeholder_text">Location</string>
    <string name="editAdvertisementButtonText">Edit Advertisement</string>
    <string name="showAdvertisementButtonText">Show Advertisement</string>

    <string name="save_changes">Save Changes</string>
    <string name="no_google_account_on_device">No Google account registered on the device.</string>

    <string name="adv_skill">Offered Skill</string>
    <!-- TODO: Understand where the f does this string go -->
    <string name="google_server_client_id" tools:ignore="TypographyDashes">1003173012370-01id4jr51kdqt07trng2dknpnk8n8c51.apps.googleusercontent.com</string>

    <string name="no_adv_found">No advertisements found</string>
    <string name="no_skills_found">No skills found</string>
    <string name="skills_list_label">Offered Skills</string>
    <string name="filters">Filters</string>
    <string name="date">Date</string>
    <string name="sorted_by_literal">Sorted by %1$s</string>
    <string name="tap_to_remove_adv_list_fragment">$1s (Tap to Remove)</string>
    <string name="genericTextViewPlaceholder">TextView</string>
    <string name="content_description_show_or_edit_advertisement">Button to show or edit advertisement</string>
    <string name="content_description_edit_profile_picture">Click to edit profile picture</string>
    <string name="content_description_profile_picture">Your profile picture</string>
    <string name="content_description_sort_btn">Click to sort Advertisements</string>
    <string name="content_description_filter_dropdown_btn">Click to show available filters</string>
    <string name="content_description_advertisement_fab">Click to create a new advertisement</string>
    <string name="login_btn_text">Login With Google</string>
    <string name="skill_name_placeholder">Skill Name</string>
    <string name="drawer_menu_go_to_user_advertisements">Your Advertisements</string>
    <string name="drawer_menu_go_to_pending">Your pending request</string>
    <string name="drawer_menu_go_to_accepted">Your accepted request</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_login">Login</string>
    <string name="chat_message_text_content_placeholder_long">Ma tu lo sai che i papaveri sono alti alti alti e tu sei piccolina e tu sei piccolina</string>
    <string name="chat_message_text_content_placeholder_short">:^]</string>
    <string name="chat_display_username_placeholder">Sample Username</string>
    <string name="chat_profile_picture_content_description">Profile picture of the contacting user</string>
    <string name="datetime_placeholder">hh:mm dd/mm/yyyy</string>
    <string name="chat_send_message_content_description">Press this button to send the message</string>
    <string name="start_chat_button_content_description">Button to send a message to the advertiser</string>
    <string name="time_slot_already_requested">Your request is pending</string>
    <string name="edit_adv_incoming_requests_header_text">Incoming Requests</string>
    <string name="edit_adv_chat_card_text">Chat with %1$s</string>
    <string name="time_slot_accepted">The advertiser has accepted your request</string>
    <string name="time_slot_accepted_for_advertiser">You accepted this request</string>
    <string name="chat_input_text_placeholder">Message</string>

    <string name="rating">Rating</string>
    <string name="rate_him">Rate Him</string>
    <string name="comment">Optional Comment</string>
    <string name="requests">Requests</string>
    <string name="request">Request</string>

    <string name="no_edit_if_requests">You cannot edit an Advertisement with pending requests</string>
    <string name="date_in_the_past">You cannot insert a date in the past</string>
    <string name="available_credits_placeholder">Credits Available</string>
    <string name="show_profile_buyer_rating">Buyer Rating</string>
    <string name="show_profile_seller_rating">Seller Rating</string>
    <string name="credits_placeholder">5</string>
    <string name="skills_placeholder">Skills</string>

    <string name="na_rating">-</string>
    <string name="rate_your">Rate your</string>
    <string name="rating_invalid">Set a rating to proceed</string>
</resources>