<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleAdvertisementET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_advertisement_placeholder_text"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/descriptionAdvertisementET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_advertisement_placeholder_text"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/dateAdvertisementEditET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="false"
            android:hint="@string/date_advertisement_placeholder_text"
            android:textSize="32sp" />

        <Button
            android:id="@+id/editDateAdvertisement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose date and time" />

        <EditText
            android:id="@+id/durationAdvertisementET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration_advertisement_placeholder_text"
            android:inputType="number"
            android:textSize="32sp" />


        <EditText
            android:id="@+id/locationAdvertisementET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_advertisement_placeholder_text"
            android:textSize="32sp" />


        <Button
            android:id="@+id/editAdvertisementSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Changes" />

    </LinearLayout>


</ScrollView>