<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="18dp"
    android:paddingTop="32dp"
    android:paddingEnd="18dp">

    <include
        android:id="@+id/show_profile_pfp_header"
        layout="@layout/show_profile_pfp_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/showProfileSpinLoading"
        style="@style/SpinKitView.Small.ThreeBounce"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/content_description_profile_picture"
        app:SpinKit_Color="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@id/show_profile_linear_layout"
        app:layout_constraintEnd_toStartOf="@id/ratingBuyerTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ratingBuyerTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Buyer Rating"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_profile_pfp_header"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/show_profile_star_rating_buyer"
        layout="@layout/show_profile_star_rating"
        android:layout_width="64sp"
        android:layout_height="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_profile_pfp_header"
        app:layout_constraintTop_toBottomOf="@+id/ratingBuyerTV" />

    <TextView
        android:id="@+id/ratingSellerTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Seller Rating"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_profile_pfp_header"
        app:layout_constraintTop_toBottomOf="@id/show_profile_star_rating_buyer" />

    <include
        layout="@layout/show_profile_star_rating"
        android:id="@+id/show_profile_star_rating_seller"
        android:layout_width="64sp"
        android:layout_height="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_profile_pfp_header"
        app:layout_constraintTop_toBottomOf="@id/ratingSellerTV" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_profile_pfp_header">

        <LinearLayout
            android:id="@+id/show_profile_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_profile_pfp_header">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-12sp"
                android:text="Fullname"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/fullNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullname_placeholder_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-12sp"
                android:text="Username"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/usernameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_placeholder_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-12sp"
                android:text="@string/email_placeholder_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/email_placeholder_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-12sp"
                android:text="@string/location_placeholder_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/locationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_placeholder_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-12sp"
                android:text="@string/available_credits_placeholder" />

            <TextView
                android:id="@+id/creditsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits_placeholder"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-12sp"
                android:text="@string/skills_placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/skillsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/no_skills_placeholder_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>