<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/show_skills_list">

    <fragment
        android:id="@+id/nav_show_profile"
        android:name="com.example.drawerexample.ui.ShowProfile"
        android:label="@string/menu_show_profile"
        tools:layout="@layout/show_profile_fragment" >
        <action
            android:id="@+id/action_nav_show_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_show_profile_no_edit"
        android:name="com.example.drawerexample.ui.ShowProfile"
        android:label="@string/menu_show_profile"
        tools:layout="@layout/show_profile_fragment" >
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.drawerexample.ui.EditProfile"
        android:label="@string/menu_edit_profile"
        tools:layout="@layout/edit_profile_fragment" >
        <action
            android:id="@+id/action_nav_edit_profile_to_nav_edit_skills"
            app:destination="@id/nav_edit_skills"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_skills"
        android:name="com.example.drawerexample.ui.EditSkills"
        android:label="@string/menu_edit_skills"
        tools:layout="@layout/edit_skills_fragment" />

    <fragment
        android:id="@+id/nav_adv_list"
        android:name="com.example.drawerexample.ui.AdvListFragment"
        android:label="@string/drawer_menu_show_adv_list"
        tools:layout="@layout/fragment_adv_list" >
        <action
            android:id="@+id/action_nav_adv_list_to_nav_edit_adv"
            app:destination="@id/nav_edit_adv"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/nav_adv_list_to_show_other_profile"
            android:name="com.example.drawerexample.ui.ShowOtherProfile"
            app:destination="@id/nav_show_profile_no_edit"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_adv_list_to_nav_show_adv"
            app:destination="@id/nav_show_adv"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_adv_list_to_chat"
            app:destination="@id/chatFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>


    <fragment
        android:id="@+id/nav_edit_adv"
        android:name="com.example.drawerexample.ui.EditAdvertisement"
        android:label="@string/menu_edit_adv"
        tools:layout="@layout/edit_time_slot_details_fragment" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.drawerexample.ui.LoginFragment"
        android:label="Login with Google"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_show_skills_list"
            app:destination="@id/show_skills_list"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/show_skills_list"
        android:name="com.example.drawerexample.ui.ShowSkillsListFragment"
        android:label="@string/skills_list_label"
        tools:layout="@layout/fragment_show_skills_list">
        <action
            android:id="@+id/action_show_skills_list_to_nav_adv_list"
            app:destination="@id/nav_adv_list"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_show_skills_list_to_nav_show_profile"
            app:destination="@id/nav_show_profile"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="allowEdit"
                android:value="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_show_adv"
        android:name="com.example.drawerexample.ui.ShowAdvertisement"
        android:label="Show Advertisement"
        tools:layout="@layout/show_time_slot_details_fragment">
        <action
            android:id="@+id/action_nav_show_adv_to_nav_edit_adv"
            app:destination="@id/nav_edit_adv"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_show_adv_to_nav_chat"
            app:destination="@id/chatFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.drawerexample.ui.ChatFragment"
        android:label="ChatFragment"
        tools:layout="@layout/fragment_chat"/>
</navigation>