<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <include
                android:id="@+id/edit_profile_pfp_header"
                layout="@layout/show_profile_pfp_card"
                android:layout_centerInParent="true"
                android:layout_width="192sp"
                android:layout_height="192sp"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname_placeholder_text"
                android:textSize="32sp"
                app:hintTextColor="@color/primaryDarkColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/primaryDarkColor"
                android:layout_marginVertical="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditFullName"
                    android:textColor="@color/primaryTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_placeholder_text"
                android:textSize="32sp"
                app:hintTextColor="@color/secondaryDarkColor"
                app:boxStrokeColor="@color/primaryDarkColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginVertical="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditUserName"
                    android:textColor="@color/primaryTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder_text"
                android:textSize="32sp"
                app:hintTextColor="@color/secondaryDarkColor"
                app:boxStrokeColor="@color/primaryDarkColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginVertical="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditMail"
                    android:layout_width="match_parent"
                    android:textColor="@color/primaryTextColor"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_placeholder_text"
                android:textSize="32sp"
                app:hintTextColor="@color/secondaryDarkColor"
                app:boxStrokeColor="@color/primaryDarkColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginVertical="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditUserLocation"
                    android:textColor="@color/primaryTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/editProfileManageSkillsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/menu_edit_skills" />

            <Button
                android:id="@+id/editProfileSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/save_changes"
                android:layout_marginVertical="5dp"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>